[package]
name = "sonata"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json","stream","blocking"] }
tokio = {version = "1", features = ["full"]}
futures-util = "0.3" # Provides the .next() method for streams
symphonia = { version = "0.5.4", features = ["aac","isomp4"] } # Note: Opus is often enabled via the 'mkv' feature in symphonia
cpal = "0.15"
bytes = "1"
